kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app: ${APPLICATION_NAME}
    spec:
      containers:
      - name: ${APPLICATION_NAME}
        image: ${CONTAINER_IMAGE_TAGGED}
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
spec:
  ports:
  - port: 80
  selector:
    app: ${APPLICATION_NAME}
  type: ClusterIP # Cluster IP since no need to map to an external port
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${APPLICATION_NAME} # Name of the ingress, named after the application
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "5g"
    nginx/client_max_body_size: 5g
spec:
  tls:
  - hosts:
    - ${CERTIFICATE_DOMAIN}
    secretName: ${APPLICATION_NAME} # Name of the secret, i.e. the certificates
  rules:
  - host: ${CERTIFICATE_DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: ${APPLICATION_NAME} # Name of the service, named after the app
          servicePort: 80
